--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,43 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# v0 runtime files (should only exist in preview, not in git)
+__v0_runtime_loader.js
+__v0_devtools.tsx
+__v0_jsx-dev-runtime.ts
+instrumentation-client.js
+instrumentation-client.ts
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# Common ignores
+node_modules/
+.next/
+.env*.local
 .DS_Store
-*.pem
+# Node.js
+node_modules/
 
-# debug
+# Next.js
+.next/
+out/
+
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
 .env*
 
-# vercel
-.vercel
+# Build
+dist/
+build/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Misc
+.vscode/
+coverage/
+public/*.DS_Store
+public/*.log
+public/*.tmp
