--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "backboard-sdk": "^1.4.12",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "firebase": "^12.9.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.460.0",
     "next": "16.1.6",
+    "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
